Creating Course Page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html lang="en-us">
 <head>
 <meta charset="UTF-8">
-<title>My First Page</title>
+<meta name="viewport" content="width=500, initial-scale=1">
+<meta name="description" content="WDD230 Assignment Page for Kelly Nebeker at Brigham Young University - Idaho">
+<title>WDD 230 Course Page for Kelly Nebeker</title>
 </head>
   
 <body>
 <header>
 
 </header>
+
+<main>
+    <div class = "logo-box">
+        <img 
+    </div>
+
+</main>
 <h1>Knebz</h1>
 <h2>Best Coder in Town</h2>
 <nav>
