--- a/index.html
+++ b/index.html
@@ -14,22 +14,40 @@
 
 <main>
     <div class = "logo-box">
-        <img 
+        <img src="kelly_profile.jpg" alt="Kelly Nebeker">
+        <h1>Kelly A. Nebeker</h1>
     </div>
-
-</main>
-<h1>Knebz</h1>
-<h2>Best Coder in Town</h2>
-<nav>
-
-</nav>
-
-<main>
-
+    <h2>WDD 230: Assignment Portal</h2>
+    <div id = "lesson">
+    <p>Lesson 02:</p>
+    <p>Lesson 03:</p>
+    <p>Lesson 04:</p>
+    <p>Lesson 05:</p>
+    <p>Lesson 06:</p>
+    <p>Lesson 07:</p>
+    <p>Lesson 08:</p>
+    <p>Lesson 09:</p>
+    <p>Lesson 10:</p>
+    <p>Lesson 11:</p>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="lesson2.html">Ranch</a></li>
+            <li><a href="lesson3.html">Website Planning Document</a></li>
+            <li><a href="lesson4.html">Chamber House</a></li>
+            <li><a href="lesson5.html">Chamber House 02</a></li>
+            <li><a href="lesson6.html">Responsive Design</a></li>
+            <li><a href="lesson7.html">Discover</a></li>
+            <li><a href="lesson8.html">Join</a></li>
+            <li><a href="lesson9.html">Business Directory</a></li>
+            <li><a href="lesson10.html">Weather API</a></li>
+            <li><a href="lesson11.html">Chamber of Commerce Site</a></li>
+        </ul>
+    </nav>
 </main>
 
 <footer>
-
+    <h3>Kelly A. Nebeker</h3>
 </footer>
 </body>  
 </html>  
