--- a/index.html
+++ b/index.html
@@ -19,31 +19,17 @@
     </div>
     <h2>WDD 230: Assignment Portal</h2>
     <div id = "lesson">
-    <p>Lesson 02:</p>
-    <p>Lesson 03:</p>
-    <p>Lesson 04:</p>
-    <p>Lesson 05:</p>
-    <p>Lesson 06:</p>
-    <p>Lesson 07:</p>
-    <p>Lesson 08:</p>
-    <p>Lesson 09:</p>
-    <p>Lesson 10:</p>
-    <p>Lesson 11:</p>
+    <li>Lesson 02: <a href="lesson2.html">Ranch</a></li>
+    <li>Lesson 03: <a href="lesson3.html">Website Planning Document</a></li>
+    <li>Lesson 04: <a href="lesson4.html">Chamber House</a></li>
+    <li>Lesson 05: <a href="lesson5.html">Chamber House 02</a></li>
+    <li>Lesson 06: <a href="lesson6.html">Responsive Design</a></li>
+    <li>Lesson 07: <a href="lesson7.html">Discover</a></li>
+    <li>Lesson 08: <a href="lesson8.html">Join</a></li>
+    <li>Lesson 09: <a href="lesson9.html">Business Directory</a></li>
+    <li>Lesson 10: <a href="lesson10.html">Weather API</a></li>
+    <li>Lesson 11: <a href="lesson11.html">Chamber of Commerce Site</a></li>
     </div>
-    <nav>
-        <ul>
-            <li><a href="lesson2.html">Ranch</a></li>
-            <li><a href="lesson3.html">Website Planning Document</a></li>
-            <li><a href="lesson4.html">Chamber House</a></li>
-            <li><a href="lesson5.html">Chamber House 02</a></li>
-            <li><a href="lesson6.html">Responsive Design</a></li>
-            <li><a href="lesson7.html">Discover</a></li>
-            <li><a href="lesson8.html">Join</a></li>
-            <li><a href="lesson9.html">Business Directory</a></li>
-            <li><a href="lesson10.html">Weather API</a></li>
-            <li><a href="lesson11.html">Chamber of Commerce Site</a></li>
-        </ul>
-    </nav>
 </main>
 
 <footer>
