--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!doctype html>
 <html lang="en-us">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=500, initial-scale=1">
-<meta name="description" content="WDD230 Assignment Page for Kelly Nebeker at Brigham Young University - Idaho">
-<title>WDD 230 Course Page for Kelly Nebeker</title>
+    <title>WDD 230 Course Page for Kelly Nebeker</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=500, initial-scale=1">
+    <meta name="description" content="WDD230 Assignment Page for Kelly Nebeker at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="css/style_home.css">
 </head>
   
 <body>
+<div id="content">
 <header>
 
 </header>
 
 <main>
     <div class = "logo-box">
-        <img src="kelly_profile.jpg" alt="Kelly Nebeker">
+        <img src="images/kelly_profile.jpg" alt="Kelly Nebeker">
         <h1>Kelly A. Nebeker</h1>
     </div>
     <h2>WDD 230: Assignment Portal</h2>
-    <div id = "lesson">
     <li>Lesson 02: <a href="lesson2.html">Ranch</a></li>
     <li>Lesson 03: <a href="lesson3.html">Website Planning Document</a></li>
     <li>Lesson 04: <a href="lesson4.html">Chamber House</a></li>
@@ -29,11 +30,11 @@
     <li>Lesson 09: <a href="lesson9.html">Business Directory</a></li>
     <li>Lesson 10: <a href="lesson10.html">Weather API</a></li>
     <li>Lesson 11: <a href="lesson11.html">Chamber of Commerce Site</a></li>
-    </div>
 </main>
 
 <footer>
     <h3>Kelly A. Nebeker</h3>
 </footer>
+</div>
 </body>  
 </html>  
