--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 </main>
 
 <footer>
-    <h3>Kelly A. Nebeker</h3>
+    <h3>Yes</h3>
+    <h4>No</h4>
 </footer>
 </div>
+<script src="js/currentdate.js"></script>
 </body>  
 </html>  
