--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
 <main>
     <div class = "logo-box">
-        <img src="images/kelly_profile.jpg" alt="Kelly Nebeker">
+        <img src="../images/kelly_profile.jpg" alt="Kelly Nebeker">
         <h1>Kelly A. Nebeker</h1>
     </div>
     <h2>WDD 230: Assignment Portal</h2>
+    <ul>
     <li>Lesson 02: <a href="lesson2.html">Ranch</a></li>
     <li>Lesson 03: <a href="lesson3.html">Website Planning Document</a></li>
     <li>Lesson 04: <a href="lesson4.html">Chamber House</a></li>
@@ -30,6 +31,7 @@
     <li>Lesson 09: <a href="lesson9.html">Business Directory</a></li>
     <li>Lesson 10: <a href="lesson10.html">Weather API</a></li>
     <li>Lesson 11: <a href="lesson11.html">Chamber of Commerce Site</a></li>
+    </ul>
 </main>
 
 <footer>
