--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <main>
     <div class = "logo-box">
-        <img src="../images/kelly_profile.jpg" alt="Kelly Nebeker">
+        <img src="./images/kelly_profile.jpg" alt="Kelly Nebeker">
         <h1>Kelly A. Nebeker</h1>
     </div>
     <h2>WDD 230: Assignment Portal</h2>
