--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-test
+<!doctype html>
+<html lang="en-us">
+<head>
+    <title>WDD 230 Course Page for Kelly Nebeker</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=500, initial-scale=1">
+    <meta name="description" content="WDD230 Assignment Page for Kelly Nebeker at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="css/style_home.css">
+</head>
+  
+<body>
+<div id="content">
+<header>
+
+</header>
+
+<main>
+    <div class = "logo-box">
+        <img src="/images/kelly_profile.jpg" alt="Kelly Nebeker">
+        <h1>Kelly A. Nebeker</h1>
+    </div>
+    <h2>WDD 230: Assignment Portal</h2>
+    <ul>
+    <li>Lesson 02: <a href="lesson2.html">Ranch</a></li>
+    <li>Lesson 03: <a href="lesson3.html">Website Planning Document</a></li>
+    <li>Lesson 04: <a href="lesson4.html">Chamber House</a></li>
+    <li>Lesson 05: <a href="lesson5.html">Chamber House 02</a></li>
+    <li>Lesson 06: <a href="lesson6.html">Responsive Design</a></li>
+    <li>Lesson 07: <a href="lesson7.html">Discover</a></li>
+    <li>Lesson 08: <a href="lesson8.html">Join</a></li>
+    <li>Lesson 09: <a href="lesson9.html">Business Directory</a></li>
+    <li>Lesson 10: <a href="lesson10.html">Weather API</a></li>
+    <li>Lesson 11: <a href="lesson11.html">Chamber of Commerce Site</a></li>
+    </ul>
+</main>
+
+<footer>
+    <h3></h3>
+    <h4></h4>
+</footer>
+</div>
+<script src="js/currentdate.js"></script>
+</body>  
+</html>  
