--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=500, initial-scale=1">
     <meta name="description" content="WDD230 Assignment Page for Kelly Nebeker at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style_home.css">
 </head>
   
