--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <h2>WDD 230: Assignment Portal</h2>
     <ul>
-    <li>Lesson 02: <a href="ranch">Ranch</a></li>
+    <li>Lesson 02: <a href="ranch">Ranch Project</a></li>
     <li>Lesson 03: <a href="lesson3.html">Website Planning Document</a></li>
     <li>Lesson 04: <a href="lesson4.html">Chamber House</a></li>
     <li>Lesson 05: <a href="lesson5.html">Chamber House 02</a></li>
