Added sites and design styles

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -10,7 +10,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
 <!-- STYLE SHEETS -->
 <link href="css/normalize.css" rel="stylesheet">
@@ -29,42 +29,42 @@
 
 <main>
   <section>
-    <h3>Design Style 1</h3>
+    <h3>Visual Hierarchy</h3>
 
-    <h4>Design Site 1</h4>
-    <a href="DesignSite1">Design Site 1</a>
+    <h4>Google.com</h4>
+    <a href="https://www.google.com/">Google.com</a>
 
     <figure>
-      <img src="images/site1.png" alt="Site 1">
-      <figcaption>Site 1</figcaption>
+      <img src="images/google.png" alt="Google Mobile Site">
+      <figcaption>Google Mobile Site</figcaption>
     </figure>
-    <p>This site exemplifies a certain design style through the layout of the site. There is a significant white space and there is a focus on the colors. The colors are consistent and show that it is a single company. There is good white space around everthing which makes a clean looking design. The background and foreground have sigficiant contrast which allows the text to be easy to be read.</p>
+    <p>Google.com is a frequently used website. It is a strong example of visual hierarchy as its look is part of its fame. Google.com offers access and links to everything google has to offer but instead of providing a long complicated list of links and pictures which are difficult to navigate and search through it knows what is important and visually idenfies its most important feature. It is a search enginer first and foremost and this is apparant as the main feature of the site is large and in the center search bar. Below that there are smaller links to possible popular sites but the search bar is apparant and prominent.</p>
   </section>
 
   <section>
-    <h3>Design Style 2</h3>
+    <h3>White Space</h3>
 
-    <h4>Design Site 2</h4>
-    <a href="DesignSite2">Design Site 2</a>
+    <h4>Hyer</h4>
+    <a href="https://www.gohyer.com/">gohyer.com</a>
 
     <figure>
-      <img src="images/site2.png" alt="Site 2">
-      <figcaption>Site 2</figcaption>
+      <img src="images/hyer.png" alt="Hyer Mobile Site">
+      <figcaption>Hyer Mobile Site</figcaption>
     </figure>
-    <p>This site exemplifies a certain design style through the layout of the site. There is a significant white space and there is a focus on the colors. The colors are consistent and show that it is a single company. There is good white space around everthing which makes a clean looking design. The background and foreground have sigficiant contrast which allows the text to be easy to be read.</p>
+    <p>Hyer's website shows a modren sleek design which makes good use of the white space throughout the page. Though there are a lot of advertisements, sales pitches and links to get started the site doesn't seem full or convoluted. There are large margins to the icons and text leaving a lot of white space but the website doesnt look empty either. The items of the page are not laying on top of each other and the links are clear, not crowding their icons and borders but clearly located. The intent of each element is clear and the page is quick and easy to scan as a result of their design.</p>
   </section>
 
   <section>
-    <h3>Design Style 3</h3>
+    <h3>Repetition</h3>
     
-    <h4>Design Site 3</h4>
-    <a href="DesignSite3">Design Site 3</a>
+    <h4>Delta Airlines</h4>
+    <a href="https://www.delta.com/">Delta.com</a>
 
     <figure>
-      <img src="images/site3.png" alt="Site 3">
-      <figcaption>Site 3</figcaption>
+      <img src="images/delta.png" alt="Delta Airlines Mobile Site">
+      <figcaption>Delta Airlines Mobile Site</figcaption>
     </figure>
-    <p>This site exemplifies a certain design style through the layout of the site. There is a significant white space and there is a focus on the colors. The colors are consistent and show that it is a single company. There is good white space around everthing which makes a clean looking design. The background and foreground have sigficiant contrast which allows the text to be easy to be read.</p>
+    <p>This site uses good use of the design principle repetition. Delta colors are the navy blue and red and they use these colors consistently throughout the site so I know who the site is for. They also consistenly use the red color to show links to click in order to navigate to other places on the webpage or for better user experiences. As a user, I don't have to conutally check what is a link and what isn't, search for the options to select or know where I am at on the page as the color palette is used consistently I can quickly look for the red.</p>
   </section>    
 </main>
 
