Edited Watercycle page links

--- a/water_cycle/percipitation.html
+++ b/water_cycle/percipitation.html
@@ -42,7 +42,7 @@
         <ul >
             <li><a href="index.html">Evaporation</a></li>
             <li><a href="condensation.html">Condensation</a></li>
-            <li class="active"><a href="precipitation.html">Precipitation</a></li>
+            <li class="active"><a href="percipitation.html">Percipitation</a></li>
             <li><a href="collection.html">Collection</a></li>    
         </ul>
     </nav>
@@ -50,7 +50,7 @@
     
 <!-- CONTENT HERE -->
     <main>
-        <h1>Precipitation</h1>
+        <h1>Percipitation</h1>
         <p>Aliquam vestibulum ultrices iusto nihil vehicula cupidatat etiam placerat culpa doloribus molestiae dolores, ipsa quo unde proin laborum torquent ultricies, libero elit! Praesent numquam hic habitant, wisi omnis, dolorem minim laudantium senectus, eu excepturi accusamus scelerisque, fermentum, eget felis, ultrices, aptent habitant minima? Auctor penatibus vehicula, dignissimos erat, consectetur non.</p>
     </main>
     
