--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li>Lesson 02: <a href="ranch/index.html">Ranch Project</a></li>
     <li>Lesson 03a: <a href="water_cycle">Water Cycle</a></li>
     <li>Lesson 03: <a href="lesson03">Website Planning Document</a></li>
-    <li>Lesson 04: <a href="lesson4.html">Chamber House</a></li>
+    <li>Lesson 04: <a href="chamber">Chamber House</a></li>
     <li>Lesson 05: <a href="lesson5.html">Chamber House 02</a></li>
     <li>Lesson 06: <a href="lesson6.html">Responsive Design</a></li>
     <li>Lesson 07: <a href="lesson7.html">Discover</a></li>
