--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content="Fill Me In">
 <meta name="author" content="Kelly Nebeker">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
+<link rel="shortcut icon" href="favicon.ico">
 
 <title>Christmas Chamber of Commerce</title>
 
