Update folder for BOM TOp 25

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -70,7 +70,7 @@
         <p>Christmas, Florida 32839</p>
         <p>info@christmascc.org</p>
         <p>407-777-7777</p>
-        <p>Location Map</p>
+        <a href="https://www.google.com/maps/place/Christmas,+FL+32709/@28.520465,-81.0174661,14z/data=!3m1!4b1!4m5!3m4!1s0x88e750a7b90535f1:0xc9fd2b8e0204fa1e!8m2!3d28.5363893!4d-81.0175609">Location Map</a>
         <p><span id="year"></span> &bull; Christmas Chamber of Commerce &bull; Kelly Nebeker &bull; WDD 230 Project</p>
         <p>&bull; <span id="lastModified"></span> &bull;</p>
     </footer>
