Updated lesson plan

--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -26,10 +26,10 @@
   
 <nav>
 <ul>
-  <li><a href="index.html">Services</a></li>
-  <li><a href="#">Location</a></li>
-  <li class="active"><a href="#">Events</a></li>
-  <li><a href="#">Contact</a></li>
+  <li class="active"><a href="index.html">Home</a></li>
+  <li><a href="target-audience.html">Target Audience</a></li>
+  <li><a href="color-scheme.html">Color Scheme</a></li>
+  <li><a href="typography.html">Typography</a></li>
 </ul>
 </nav>
 
@@ -42,18 +42,11 @@
     <h1>Site Purpose</h1>
 
     <p>The purpose for the website is to promote local businesses in the area as well as draw in customers from out of town that will spend money at the local businesses. The site will also work as a meeting point for members of the chamber of commerce which will allow them view upcoming events and benefits from joining the chamber of commerce.</p>
-
-    <h1>Target Audience and Scenerios</h1>
-
-    <p>Target audience is tourists, people visiting Florida, potential local business members and current local business members.</p>
-    <p>Two personas for the site are first the tourists. Targeted here is family travel. Mid thirties parents with young kids. Some college education that are accessing the site to look for educational fun items to do on the weekend. They can go to Fort Christmas which is a park and historical site or visit Swampy the largest alligator statue and entrance to a wildlife refuge. The second persona is a local business owner. Age can range from twenties to fourties. Education is probaly high school level or maybe some college. They are looking to expand the reach of their business through advertisement or being involved in local events that will get their name out. They will also want to promote tourism in the area that will draw in customers.</p>
-    <ol>
-      <li>Is there anything interesting going on in Christmas? How do I get there?</li>
-      <li>What is the benefit of joining the chamber of commerce?</li>
-      <li>How do I help the wetlands?</li>
-      <li>Is there any family recreational things to do?</li>
-    </ol>
-
+    <h1>Logo</h1>
+    <figure>
+    <img src="images/logo.png" alt="logo">
+    </figure>
+    
     <h1>Site Map</h1>
 
     <figure>
@@ -61,52 +54,6 @@
     <figcaption>Site Map</figcaption>
     </figure>
 
-    <h1>Color Scheme</h1>
-
-    <table>
-      <tr>
-        <td>Site Header</td>
-        <td>Font</td>
-        <td>40px</td>
-        <td class="siteheader">Sample</td>
-      </tr>  
-      <tr>
-        <td>Primary Navigation</td>
-        <td>Font</td>
-        <td>35px</td>
-        <td class="primarynavigation">Sample</td>
-      </tr>
-      <tr>
-        <td>Footer Navigation</td>
-        <td>Font</td>
-        <td>30px</td>
-        <td class="footernavigation">Sample</td>
-      </tr>
-      <tr>
-        <td>Heading 1</td>
-        <td>Font</td>
-        <td>30px</td>
-        <td class="header1">Sample</td>
-      </tr>
-      <tr>
-        <td>Heading 2</td>
-        <td>Font</td>
-        <td>25px</td>
-        <td class="header2">Sample</td>
-      </tr>
-      <tr>
-        <td>Heading 3</td>
-        <td>Font</td>
-        <td>20px</td>
-        <td class="header3">Sample</td>
-      </tr>
-      <tr>
-        <td>Paragraph Text</td>
-        <td>Font</td>
-        <td>16px</td>
-        <td class="ptext">Sample</td>
-      </tr>
-    </table>    
 
     <h1>Wireframe Sketches</h1>
     <p>Coming Soon</p>
