--- a/lesson03/typography.html
+++ b/lesson03/typography.html
@@ -17,6 +17,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Ubuntu&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 
 </head>
 
@@ -44,50 +53,48 @@
     <table>
       <tr>
         <td>Site Header</td>
-        <td>Bree Serif</td>
+        <td>Courgette</td>
         <td>40px</td>
         <td class="siteheader">Sample</td>
       </tr>  
       <tr>
         <td>Primary Navigation</td>
-        <td>Font</td>
+        <td>Roboto </td>
         <td>35px</td>
         <td class="primarynavigation">Sample</td>
       </tr>
       <tr>
         <td>Footer Navigation</td>
-        <td>Font</td>
+        <td>Roboto</td>
         <td>30px</td>
         <td class="footernavigation">Sample</td>
       </tr>
       <tr>
         <td>Heading 1</td>
-        <td>Font</td>
+        <td>Bree Serif</td>
         <td>30px</td>
         <td class="header1">Sample</td>
       </tr>
       <tr>
         <td>Heading 2</td>
-        <td>Font</td>
+        <td>Bree Serif</td>
         <td>25px</td>
         <td class="header2">Sample</td>
       </tr>
       <tr>
         <td>Heading 3</td>
-        <td>Font</td>
+        <td>Bree Serif</td>
         <td>20px</td>
         <td class="header3">Sample</td>
       </tr>
       <tr>
         <td>Paragraph Text</td>
-        <td>Font</td>
+        <td>Lora</td>
         <td>16px</td>
         <td class="ptext">Sample</td>
       </tr>
     </table>    
 
-    <h1>Wireframe Sketches</h1>
-    <p>Coming Soon</p>
 </main>
 
 <footer>
