--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
 <body>
 
     <header>
-        <img src="images/logo.png" alt="logo">
+        <img id="logo" src="images/logo.png" alt="logo">
         <div>
             <h1>Christmas Chamber of Commerce</h1>
             <h2>It's Always Christmas Here</h2>
@@ -55,30 +55,81 @@
                 <li><a href="directory">Directory</a></li>
                 <li><a href="join">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i> 
             </ul>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i> 
     </nav>
+
+    <div id="message">🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</div>
 
     <main>
        
         <div class="wrapper">
-            <div class="box1">Hero with site name and call to action</div>
-            <div class="box2">Event</div>
-            <div class="box3">Weather</div>
-            <div class="box4">News Release</div>
-            <div class="box5">Join</div>
+            <div class="box1">
+                <picture>
+                    <img id="mainimg" src="images/christmastree.jpg" alt="christmas tree">
+                </picture>
+                <section class="calltoaction">
+                    <a href="join">COME JOIN US</a>
+                </section>
+            </div>
+            <div class="box2">
+                <h3>Fall Market</h3>
+                <img src="images/market.png" alt="basket image">
+                <p>Christmass Chamber of Commerce sponsored local market with stalls from hundreds of local vendors.</p>
+                <p>Saturday, November 18 @ 9am</p>
+                <a class="market" href="discover">Learn More</a>
+            </div>
+            <div class="box3">
+                <h3>Local Weather</h3>
+                <img src="images/sun.png">
+                <p class="temp">83°</p>
+                <p class="weather">SUNNY</p>
+                <p class="windspeed">Wind Speed: 10 MPH</p>
+                <p class="windchill">Wind Chill: N/A</p>
+            </div>
+            <div class="box4">
+                <h3>News Release</h3>
+                <p>As a chamber of commerce we are continually growing and becoming more and more prominent. Christmas, Florida was voted in the top 10 places in easter central florida to start a business. Christmas time is approaching and that means more visitors to the local post office. If you would like to advertise at the post office join the chamber of commerce and submit to the chamber the flyer design you would like. There is a set aside advertisement area for the chamber of commerce in the post office and we will put up your advertisement.</p>
+            </div>
+            <div class="box5">
+                <a class="join" href="join">Become a Member!</a>
+                <p>Becoming a member is easy with clear benefits</p> 
+                <p>Discover what we can do for you</p>
+            </div>
             <div class="box6">
-                <div class="box7">Spotlight 1</div>
-                <div class="box8">Spotlight 2</div>
-                <div class="box9">Spotlight 3</div>
+                <div class="box7">
+                    <h3>Marge's Laundromat</h3>
+                    <img src="images/margelaundry.png" alt="Marge's Laundry">
+                    <p>Self service or drop off options for those on the go!</p>
+                    <p>info@margelaundry.com</p>
+                    <p>(407) 999-9999</p>
+                    <a href="">Website</a>
+                </div>
+                <div class="box8">
+                    <h3>Christmas Crafts</h3>
+                    <img src="images/christmascrafts.png" alt="Christmas Crafts">
+                    <p>Taking you back to Christmas as a child with home crafts for everyone!</p>
+                    <p>info@christmascrafts.com</p>
+                    <p>(407) 999-9997</p>
+                    <a href="">Website</a>
+                </div>
+                <div class="box9">
+                    <h3>Hot Pot Heaven</h3>
+                    <img src="images/hotpot.png" alt="Hot Pot">
+                    <p>ALL YOU CAN EAT!</p>
+                    <p>Meat, Vegetables, Noodles and Happiness</p>
+                    <p>info@hotpotheaven.com</p>
+                    <p>(407) 999-9998</p>
+                    <a href="">Website</a>
+                </div>
             </div>
         </div>
 
     </main>
 
     <footer>
-        <img src="images/logo.png" alt="logo">
+        <img id="logo" src="images/logo.png" alt="logo">
         <p>Christmas Chamber of Commerce</p>
         <p>18976 E Hwy 50</p>
         <p>Christmas, Florida 32839</p>
@@ -87,6 +138,13 @@
         <a href="https://www.google.com/maps/place/Christmas,+FL+32709/@28.520465,-81.0174661,14z/data=!3m1!4b1!4m5!3m4!1s0x88e750a7b90535f1:0xc9fd2b8e0204fa1e!8m2!3d28.5363893!4d-81.0175609">Location Map</a>
         <p><span id="year"></span> &bull; Christmas Chamber of Commerce &bull; Kelly Nebeker &bull; WDD 230 Project</p>
         <p>&bull; <span id="lastModified"></span> &bull;</p>
+        <ul>
+            <li><a class="flaticon" href="https://www.flaticon.com/free-icons/autumn" title="autumn icons">Autumn icons created by Flat Icons - Flaticon</a></li>
+            <li><a class="flaticon" href="https://www.flaticon.com/free-icons/laundry-basket" title="laundry basket icons">Laundry basket icons created by Freepik - Flaticon</a></li>
+            <li><a class="flaticon" href="https://www.flaticon.com/free-icons/christmas" title="christmas icons">Christmas icons created by Umeicon - Flaticon</a></li>
+            <li><a class="flaticon" href="https://www.flaticon.com/free-icons/hot-pot" title="Hot pot icons">Hot pot icons created by mangsaabguru - Flaticon</a></li>
+            <li><a class="flaticon" href="https://www.flaticon.com/free-icons/weather" title="weather icons">Weather icons created by Freepik - Flaticon</a></li>
+        </ul>
     </footer>
     
 <script src="js/scripts.js"></script>
