Added discover page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,12 +50,12 @@
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="discover">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory">Directory</a></li>
                 <li><a href="join">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
-                <img id="icon" src="images/facebook_icon.png">
-                <img id="icon" src="images/instagram_icon.png">
+                <li><a href="www.facebook.com"><img src="images/facebook_icon.png"></a></li>
+                <li><a href="www.instagram.com"><img src="images/instagram_icon.png"></a></li>
             </ul>
     </nav>
 
