Improved Discover Page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -58,25 +58,43 @@
     </nav>
 
 <main>
+
+    <p>Days since last visit: <span class="visitDisplay"></span></p>
+
     <div class="discover">
      <picture>   
-      <img src="images/placeholder.jpg" data-src="images/ftchristmas.jpg" alt="Fort Christmas">
+      <img src="images/placeholder.jpg"  alt="Fort Christmas" 
+                data-srcset="images/ftchristmas200.jpg 200W,
+                             images/ftchristmas500.jpg 500w,
+                             images/ftchristmas800.jpg 800w">
      </picture>
      <p>Christmas Florida has a historical park which includes playground, softball fields, volleyball and more. This park is also an old settlement which has remaining building open for tours where all can learn about history in florida.</p>
      <picture> 
-      <img src="images/placeholder.jpg" data-src="images/wetlands.jpg" alt="Florida Wetlands">
+      <img src="images/placeholder.jpg" alt="Florida Wetlands"
+                data-srcset="images/wetlands200.jpg 200W,
+                             images/wetlands500.jpg 500w,
+                             images/wetlands800.jpg 800w">
      </picture>
      <p>Christmas Florida is on the outskirts of city life causing it to be  surrounded by wetlands. There is quick access to the St John's river and there are many local companies that offer airboat rides and alligator sighting tours.</p>
      <picture> 
-      <img src="images/placeholder.jpg" data-src="images/swampy.jpg" alt="Swampy The Alligator">
+      <img src="images/placeholder.jpg" alt="Swampy The Alligator"
+                data-srcset="images/swampy200.jpg 200W,
+                             images/swampy500.jpg 500w,
+                             images/swampy800.jpg 800w">
      </picture>
      <p>Christmas Florida proudly boats the World's Largest Alligator, Swampy. Though he isn't a real gator he is the entrance to a wildlife refuge where you can see the alligators and other native florida wildlife that has been recovered and prepped for being returned to the wild.</p>
      <picture> 
-      <img src="images/placeholder.jpg" data-src="images/post_office.jpg" alt="Christmas Post Office">
+      <img src="images/placeholder.jpg" alt="Christmas Post Office"
+                data-srcset="images/post_office200.jpg 200W,
+                             images/post_office500.jpg 500w,
+                             images/post_office800.jpg 800w">
      </picture>
      <p>Welcome to the Christmas Florida post office. As Christmas nears many people travel to Christmas post office to have Christmas stamped on their letters when they sent Christmas packages and cards. Come visit the Christmas post office today and everything they have to offer.</p>
      <picture> 
-      <img src="images/placeholder.jpg" data-src="images/christmastree.jpg" alt="Christmas Tree">
+      <img src="images/placeholder.jpg" alt="Christmas Tree"
+                data-srcset="images/christmastree200.jpg 200W,
+                             images/christmastree500.jpg 500w,
+                             images/christmastree800.jpg 800w">
      </picture>
      <p>Christ Florida maintains a year round Christmas Tree located at the entrace to the town. It's 2,697 residents are pround of where they live and maintain their 45.2 sq mi with care.</p>
     </div>
