--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li>Lesson 05: <a href="chamber">Chamber House 02</a></li>
     <li>Lesson 06: <a href="lesson6.html">Responsive Design</a></li>
     <li>Lesson 07: <a href="lesson-7/lazyload.html">Discover</a></li>
-    <li>Lesson 08: <a href="lesson8.html">Join</a></li>
+    <li>Lesson 08: <a href="lesson-8/tablebuild.html">Join</a></li>
     <li>Lesson 09: <a href="lesson9.html">Business Directory</a></li>
     <li>Lesson 10: <a href="lesson10.html">Weather API</a></li>
     <li>Lesson 11: <a href="lesson11.html">Chamber of Commerce Site</a></li>
