--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,7 +50,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="discover.html">Discover</a></li>
                 <li><a href="directory">Directory</a></li>
-                <li><a href="join">Join</a></li> 
+                <li><a href="join.html">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
                 <a href="http://www.facebook.com"><img id="icon" src="images/facebook_icon.png"></a>
                 <a href="http://www.instagram.com"><img id="icon" src="images/instagram_icon.png"></a>
