--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,7 +52,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory">Directory</a></li>
-                <li><a href="join">Join</a></li> 
+                <li><a href="join.html">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
                 <li><a href="www.facebook.com"><img src="images/facebook_icon.png"></a></li>
                 <li><a href="www.instagram.com"><img src="images/instagram_icon.png"></a></li>
