Fixed site errors

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
 <body>
 
     <header>
-        <img id="logo" src="images/logo.webp" alt="logo">
+        <img class="logo" src="images/logo.webp" alt="logo">
         <div>
             <h1>Christmas Chamber of Commerce</h1>
             <h2>It's Always Christmas Here</h2>
@@ -54,9 +54,11 @@
                 <li><a href="directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
-                <li><a href="www.facebook.com"><img src="images/facebook_icon.png"></a></li>
-                <li><a href="www.instagram.com"><img src="images/instagram_icon.png"></a></li>
             </ul>
+            <div class="social-media">
+                <a href="www.facebook.com"><img src="images/facebook_icon.png" alt="facebook"></a>
+                <a href="www.instagram.com"><img src="images/instagram_icon.png" alt="instagram"></a>
+            </div>
     </nav>
 
     <div id="message">🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</div>
@@ -90,7 +92,7 @@
             </div>
             <div class="box3">
                 <h3>Local Weather</h3>
-                <img class="sunny" src="images/sun.png">
+                <img class="sunny" src="images/sun.png" alt="sun">
                 <div class="temp"><span id="temp1">49</span>°F</div>
                 <span class="weather">SUNNY</span>
                 <div class="windspeed"><span class="windspeedlabel">Wind Speed</span>: <span id="windspeed1">10</span> mph</div>
@@ -137,7 +139,7 @@
     </main>
 
     <footer>
-        <img id="logo" src="images/logo.webp" alt="logo">
+        <img class="logo" src="images/logo.webp" alt="logo">
         <p>Christmas Chamber of Commerce</p>
         <p>18976 E Hwy 50</p>
         <p>Christmas, Florida 32839</p>
