--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,7 +35,7 @@
 
 <body>
     <header>
-        <img id="logo" src="images/logo.webp" alt="logo">
+        <img class="logo" src="images/logo.webp" alt="logo">
         <div>
             <h1>Christmas Chamber of Commerce</h1>
             <h2>It's Always Christmas Here</h2>
@@ -55,8 +55,8 @@
                 <li><a href="contact">Contact</a></li>  
             </ul>
         <div class="social-media">
-            <a href="www.facebook.com"><img src="images/facebook_icon.png"></a>
-            <a href="www.instagram.com"><img src="images/instagram_icon.png"></a>
+            <a href="www.facebook.com"><img src="images/facebook_icon.png" alt="facebook"></a>
+            <a href="www.instagram.com"><img src="images/instagram_icon.png" alt="instagram"></a>
         </div>    
     </nav>
 
@@ -98,7 +98,7 @@
         </main>
 
         <footer>
-            <img id="logo" src="images/logo.webp" alt="logo">
+            <img class="logo" src="images/logo.webp" alt="logo">
             <p>Christmas Chamber of Commerce</p>
             <p>18976 E Hwy 50</p>
             <p>Christmas, Florida 32839</p>
