--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
 <body>
 
     <header>
-        <img id="logo" src="images/logo.webp" alt="logo">
+        <img class="logo" src="images/logo.webp" alt="logo">
         <div>
             <h1>Christmas Chamber of Commerce</h1>
             <h2>It's Always Christmas Here</h2>
@@ -52,9 +52,12 @@
                 <li><a href="directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
-                <a href="http://www.facebook.com"><img id="icon" src="images/facebook_icon.png"></a>
-                <a href="http://www.instagram.com"><img id="icon" src="images/instagram_icon.png"></a>
             </ul>
+            <div class="social-media">
+                <a href="www.facebook.com"><img src="images/facebook_icon.png" alt="facebook"></a>
+                <a href="www.instagram.com"><img src="images/instagram_icon.png" alt="instagram"></a>
+            </div>
+
     </nav>
 
 <main>
@@ -102,7 +105,7 @@
 </main>
 
 <footer>
-    <img id="logo" src="images/logo.webp" alt="logo">
+    <img class="logo" src="images/logo.webp" alt="logo">
     <p>Christmas Chamber of Commerce</p>
     <p>18976 E Hwy 50</p>
     <p>Christmas, Florida 32839</p>
