--- a/chamber/join.html
+++ b/chamber/join.html
@@ -72,7 +72,7 @@
                 <legend>Personal Information</legend>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
                 <label class="top">Last Name* <input type="text" name="lname" required></label>
-                <label class="top">Title <input type="text" name="title" ></label>
+                <label class="top">Title <input type="text" name="title" pattern="[a-zA-Z0-9.-_]{7,25}"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label class="top">Phone <input type="tel" name="phone" placeholder="1235551234"></label>
                 <label class="top">Business Title* <input type="text" name="title text" required></label>
