Updated Figure to Picture

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,14 +65,14 @@
 
     <main>
 
-        <figure class="myphoto">
+        <picture class="myphoto">
             <img src="images/herosrc.jpg" alt="herosrc" sizes="96vw"
             srcset="images/herosrc400.jpg 400w,
                     images/herosrc650.jpg 650w,
                     images/herosrc900.jpg 900w,
                     images/herosrc.jpg 1050w">
         <figcaption>Hero Image</figcaption>
-        </figure>
+        </picture>
 
         <div class="wrapper">
             <div class="box1">
