--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -64,11 +64,11 @@
         <h1>Member Business Directory</h1>
 
         <div class="menu">
-            <button id="grid">Grid</button>
-            <button id="list">List</button>
+            <button id="grid"><img src="images/grid_select.png" class="grid_select" alt="grid_select"></button>
+            <button id="list"><img src="images/list.png" class="list_select" alt="list_select"></button>
         </div>
 
-        <div class="cards"></div>
+        <div id="business" class="grid"></div>
 
     </main>
 
