--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -50,7 +50,7 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="directory">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li> 
                 <li><a href="contact">Contact</a></li>  
             </ul>
