Updated Course Page for Wireframe and Directory

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <li>Lesson 07: <a href="lesson-7/lazyload.html">Discover</a></li>
     <li>Lesson 08: <a href="lesson-8/tablebuild.html">Table Build</a></li>
     <li>Lesson 09a: <a href="lesson-9/prophets.html">Prophets Card Page</a></li>
-    <li>Lesson 09: <a href="lesson9.html">Business Directory</a></li>
+    <li>Lesson 09b: <a href="https://wireframe.cc/UFxbg2">Phone Directory Wireframe</a></li>
+    <li>Lesson 09b: <a href="https://wireframe.cc/cjztdM">Tablet Directory Wireframe</a></li>
+    <li>Lesson 09b: <a href="https://wireframe.cc/W7X2qT">Desktop Directory Wireframe</a></li>
+    <li>Lesson 09: <a href="chamber/directory.html">Business Directory</a></li>
     <li>Lesson 10: <a href="lesson10.html">Weather API</a></li>
     <li>Lesson 11: <a href="lesson11.html">Chamber of Commerce Site</a></li>
     </ul>
