Added wearher API

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,10 +91,10 @@
             </div>
             <div class="box3">
                 <h3>Local Weather</h3>
-                <img class="sunny" src="images/sun.png" alt="sun">
-                <div class="temp"><span id="temp1">49</span>°F</div>
-                <span class="weather">SUNNY</span>
-                <div class="windspeed"><span class="windspeedlabel">Wind Speed</span>: <span id="windspeed1">10</span> mph</div>
+                <img id="weather_icon" src="images/sun.png" alt="weather icon">
+                <div class="temp"><span id="currentTemp">00</span>°F</div>
+                <span id="weather">SUNNY</span>
+                <div class="windspeed"><span class="windspeedlabel">Wind Speed</span>: <span id="windSpeed1">10</span> mph</div>
                 <div class="windchill"><span class="windchilllabel">Wind Chill</span>: <span id="windchill1"></span> °F</div>
             </div>
             <div class="box4">
