--- a/chamber/index.html
+++ b/chamber/index.html
@@ -84,7 +84,7 @@
                 <h3>Local Weather</h3>
                 <img id="weather_icon" src="images/sun.png" alt="weather icon">
                 <div class="temp"><span id="currentTemp">00</span>°F</div>
-                <span id="weather">SUNNY</span>
+                <span id="weather" style="text-transform: uppercase">SUNNY</span>
                 <div class="windspeed"><span class="windspeedlabel">Wind Speed</span>: <span id="windSpeed1">10</span> mph</div>
                 <div class="windchill"><span class="windchilllabel">Wind Chill</span>: <span id="windchill1"></span> °F</div>
             </div>
