Addec contact page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,7 +53,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li> 
-                <li><a href="contact">Contact</a></li>  
+                <li><a href="contact.html">Contact</a></li>  
             </ul>
             <div class="social-media">
                 <a href="www.facebook.com"><img src="images/facebook_icon.png" alt="facebook"></a>
@@ -97,32 +97,7 @@
                 <p>Becoming a member is easy with clear benefits</p> 
                 <p>Discover what we can do for you</p>
             </div>
-            <div class="box6">
-                <div class="box7">
-                    <h3>Marge's Laundromat</h3>
-                    <img src="images/margelaundry.png" alt="Marge's Laundry">
-                    <p>Self service or drop off options for those on the go!</p>
-                    <p>info@margelaundry.com</p>
-                    <p>(407) 999-9999</p>
-                    <a href="">Website</a>
-                </div>
-                <div class="box8">
-                    <h3>Christmas Crafts</h3>
-                    <img src="images/christmascrafts.png" alt="Christmas Crafts">
-                    <p>Taking you back to Christmas as a child with home crafts for everyone!</p>
-                    <p>info@christmascrafts.com</p>
-                    <p>(407) 999-9997</p>
-                    <a href="">Website</a>
-                </div>
-                <div class="box9">
-                    <h3>Hot Pot Heaven</h3>
-                    <img src="images/hotpot.png" alt="Hot Pot">
-                    <p>ALL YOU CAN EAT!</p>
-                    <p>Meat, Vegetables, Noodles and Happiness</p>
-                    <p>info@hotpotheaven.com</p>
-                    <p>(407) 999-9998</p>
-                    <a href="">Website</a>
-                </div>
+            <div class="box6" id="spots">
             </div>
         </div>
 
@@ -149,5 +124,6 @@
     
 <script src="js/scripts.js"></script>
 <script src="js/windchill.js"></script>
+<script src="js/get.js"></script>
 </body>
 </html>
