--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,7 +52,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li> 
-                <li><a href="contact">Contact</a></li>  
+                <li><a href="contact.html">Contact</a></li>  
             </ul>
         <div class="social-media">
             <a href="www.facebook.com"><img src="images/facebook_icon.png" alt="facebook"></a>
@@ -76,6 +76,7 @@
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label class="top">Phone <input type="tel" name="phone" placeholder="1235551234"></label>
                 <label class="top">Business Title* <input type="text" name="title text" required></label>
+                <label class="top">Comments/Questions <input type="text" placeholder="Type comments here"></label>
             </fieldset>
     
             <fieldset>
