--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -52,7 +52,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li> 
-                <li><a href="contact">Contact</a></li>  
+                <li><a href="contact.html">Contact</a></li>  
             </ul>
         <div class="social-media">
             <a href="www.facebook.com"><img src="images/facebook_icon.png" alt="facebook"></a>
