--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -78,8 +78,8 @@
                 <img id="weather_icon" src="images/sun.png" alt="weather icon">
                 <div class="temp"><span id="currentTemp">00</span>°F</div>
                 <span id="weather" style="text-transform: uppercase">SUNNY</span>
-                <div class="humidity"><span class="humiditylabel">Wind Speed</span>: <span id="humidity1">10</span>%</div>
-                <div class="windchill"><span class="windchilllabel">Wind Chill</span>: <span id="windchill1"></span> °F</div>
+                <div class="humidity"><span class="humiditylabel">Humidity</span>: <span id="humidity1">10</span>%</div>
+                <div class="forecast"><span class="forecastlabel">Wind Chill</span>: <span id="windchill1"></span> °F</div>
             </div>
             <div class="box4">
                 <h3>News Release</h3>
