Update forecast api

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -79,7 +79,8 @@
                 <div class="temp"><span id="currentTemp">00</span>°F</div>
                 <span id="weather" style="text-transform: uppercase">SUNNY</span>
                 <div class="humidity"><span class="humiditylabel">Humidity</span>: <span id="humidity1">10</span>%</div>
-                <div class="forecast"><span class="forecastlabel">Wind Chill</span>: <span id="windchill1"></span> °F</div>
+                <h4>Three Day Forecast</h4>
+                <div class="forecast"><span class="forecastlabel1"></span>: <span id="forecastTemp1"></span>°F <span class="forecastlabel2"></span>: <span id="forecastTemp2"></span>°F <span class="forecastlabel3"></span>: <span id="forecastTemp3"></span>°F</div>
             </div>
             <div class="box4">
                 <h3>News Release</h3>
