--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -54,8 +54,6 @@
             </ul>
     </nav>
 
-    <div class="cartbanner">You have <span id="cart"></span> in your cart. Check out on the fresh page!</div>
-
     <main>
         <div class="wrapper">
             <div class="box1">
@@ -67,11 +65,19 @@
                 </section>
             </div>
             <div class="box2">
-                <h3>Fall Market</h3>
-                <img src="images/market.png" alt="basket image">
-                <p>Christmass Chamber of Commerce sponsored local market with stalls from hundreds of local vendors.</p>
-                <p>Saturday, November 18 @ 9am</p>
-                <a class="market" href="discover">Learn More</a>
+                <h3>Drink of the Week!</h3>
+                <p>The featured drink this week is our Mango Pomegranate and Kiwi juice</p>
+                <p>This is our most popular mix of the week. Don't miss out and order yours today.</p>
+            </div>
+            <div class="box4">
+                <h3>California Beautiful</h3>
+                <img src="images/orchards.png" alt="california orchards">
+                <p>Located in beautiful southern California Bountiful Foods secures the best of the locally available organic fresh produce for the most discerning customers. Those looking to visit Carlsbad can enjoy easy access to many fun family spots just as Legoland, Disney land and the world famous beaches. After a long day in the sun nothing is more refreshing than a fruit drink from Bountiful Foods. Orders yours in the Fresh Juices page. We travel through all of southern California.</p>
+            </div>
+            <div class="box5">
+                <h3>Only the Best!</h3>
+                <img src="images/fruit.png" alt="fresh fruits">
+                <p>Bountiful Foods only selects the best produce for our drinks. Certified Organic, GMO free and locally farmed you cannot find a better product for health and hapiness.</p> 
             </div>
             <div class="box3">
                 <h3>Local Weather</h3>
@@ -82,16 +88,9 @@
                 <h4>Three Day Forecast</h4>
                 <div class="forecast"><span class="forecastlabel1"></span>: <span id="forecastTemp1"></span>°F <span class="forecastlabel2"></span>: <span id="forecastTemp2"></span>°F <span class="forecastlabel3"></span>: <span id="forecastTemp3"></span>°F</div>
             </div>
-            <div class="box4">
-                <h3>News Release</h3>
-                <p>As a chamber of commerce we are continually growing and becoming more and more prominent. Christmas, Florida was voted in the top 10 places in easter central florida to start a business. Christmas time is approaching and that means more visitors to the local post office. If you would like to advertise at the post office join the chamber of commerce and submit to the chamber the flyer design you would like. There is a set aside advertisement area for the chamber of commerce in the post office and we will put up your advertisement.</p>
-            </div>
-            <div class="box5">
-                <a class="join" href="join">Become a Member!</a>
-                <p>Becoming a member is easy with clear benefits</p> 
-                <p>Discover what we can do for you</p>
-            </div>
-            <div class="box6" id="spots">
+            <div class="ordercard">
+                <h3>Current Order Status</h3>
+                <p>You have currently ordered <span id="ordernum"></span> specialty drinks!</p>
             </div>
         </div>
 
